syntax="proto3";
package jdaw.product.srv;

option go_package ="./proto;jdaw_product_srv";

service Products{
  rpc GetProductList(ProductListRequest) returns(ProductListResponse){}
  rpc ProductAdd(ProductAddRequest) returns (ProductAddResponse){}
  rpc ProductDelete(ProductDeleteRequest) returns(ProductAddResponse){}
  rpc GetProductInfo(ProductDeleteRequest) returns(ProductInfoResponse){}
  rpc ProductUpdate(ProductUpdateRequest) returns(ProductAddResponse){}
}

message ProductUpdateRequest{
  int32 id=1;
  string name=2;
  float price=3;
  int32 num=4;
  string unit=5;
  string pic=6;
  string desc=7;
}

message ProductInfoResponse{
  int32 id=1;
  string name=2;
  float price=3;
  int32 num=4;
  string unit=5;
  string pic=6;
  string desc=7;
}

message ProductAddRequest{
  string name=1;
  float price=2;
  int32 num=3;
  string unit=4;
  string pic=5;
  string desc=6;
  string create_time=7;
}

message ProductAddResponse{
  int32 code=1;
  string msg=2;
}

message ProductDeleteRequest{
  int32 id=1;
}

message ProductListRequest{
  int32 currentPage=1;
  int32 pageSize=2;
}

message ProductListResponse{
  int32 code=1;
  string msg=2;
  repeated ProductDetail productlist=3;
  int32 total=4;
  int32 current=5;
  int32 page_size=6;
}

message ProductDetail{
  int32 id=1;
  string name=2;
  float price=3;
  int32 num=4;
  string unit=5;
  string pic=6;
  string desc=7;
  string create_time=8;
}